deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-simple-app-nginx
  labels:
    app: nginx
spec:
  replicas: 2 # Let's run 2 pods
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.25.5 # Using a specific version of nginx
        ports:
        - containerPort: 80
