service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-simple-app-nginx-service
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80       # Port the service will be available on within the cluster
      targetPort: 80 # Port the nginx container is listening on
  type: ClusterIP   # Only reachable within the cluster, Ingress will handle external
